sixth_auth_sign_inup

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,7 @@
 PORT=8000
 MONGODB_URL="mongodb+srv://prasarsrivastava_db_user:prasar2512shan@cluster0.g8nl1bg.mongodb.net/virtual_assistant"  
 JWT_SECRET="Shan@1225"
+Cloud_name="dk7mhgtrr"
+API_key="274565545257377"
+API_Secret="yWP-CmXt_zr1jykK-K_kOSW3QCY"
+API_environment_variable_CLOUDINARY_URL="cloudinary://274565545257377:**********@dk7mhgtrr"
